feat: сохранять пробную тренировку из браузера
